# Bosch-Simulator

./: README.md
src/example/src/: camera.py  lane.py  lane_detector.py  line_detector.py  region_of_interest.py
src/models_pkg/camera/: model.sdf
src/models_pkg/camera_follow/: model.sdf
src/models_pkg/rcCar_assembly/: model.sdf
src/models_pkg/rcCar_assembly_REC/: model.sdf
src/sim_pkg/: CMakeLists.txt  package.xml
src/sim_pkg/launch/sublaunchers/: car.launch
