<?xml version="1.0"?>
<package format="2">
  <name>sim_pkg</name>
  <version>1.0.0</version>
  <description>The sim_pkg package</description>

  <!-- Mantenimiento -->
  <maintainer email="rares.lemnariu@ro.bosch.com">Rares Lemnariu</maintainer>
  <license>Bosch ECC</license>

  <!-- Dependencias de construcción -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencias de ejecución -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <!-- Dependencias opcionales -->
  <!-- <exec_depend>geometry_msgs</exec_depend> -->

  <!-- Exportar configuraciones específicas -->
  <export>
    <!-- Si hay plugins o configuraciones extra -->
  </export>
</package>
